Relax hanging method criteria. Scan named IOValue methods